@startuml participant
class PageItem {}
class InterviewItem {
    +value: unknown
}
class PageSet {}
class Interview {
    +date: Date
}
class Sample {
    +name: string
}
class Survey {}
class Participant {
    +participantId: string
}
InterviewItem o..> "1" PageItem
Interview o..> "1" PageSet
Participant o..> "1" Survey
Participant o.r.> "1" Sample
Interview *-- "n" InterviewItem
Participant *-- "n" Interview
hide methods
hide Survey members
hide PageSet members
hide PageItem members
@enduml